--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 #database
-#spring.datasource.url=jdbc:mysql://localhost:3306/nutrimiski
-#spring.datasource.username=root
-#spring.datasource.password=
-spring.datasource.url=jdbc:mysql://us-cdbr-east-05.cleardb.net:3306/heroku_853885be7ce1deb
-spring.datasource.username=bf4e07bf2a9902
-spring.datasource.password=666a2efb
+spring.datasource.url=jdbc:mysql://localhost:3306/nutrimiski
+spring.datasource.username=root
+spring.datasource.password=
+#spring.datasource.url=jdbc:mysql://us-cdbr-east-05.cleardb.net:3306/heroku_853885be7ce1deb
+#spring.datasource.username=bf4e07bf2a9902
+#spring.datasource.password=666a2efb
 spring.jpa.hibernate.ddl-auto=update
 
 #security
