fix: Fixed delete child error

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 #database
 #------------------------------------- Local ----------------------------------------------
-#spring.datasource.url=jdbc:mysql://localhost:3306/nutrimiski
+#spring.datasource.url=jdbc:mysql://localhost:3306/nutrimisky
 #spring.datasource.username=root
 #spring.datasource.password=
 #--------------------------------- HEROKU - DEV --------------------------------------------
 spring.datasource.url=jdbc:mysql://us-cdbr-east-05.cleardb.net:3306/heroku_853885be7ce1deb
 spring.datasource.username=bf4e07bf2a9902
 spring.datasource.password=666a2efb
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 
 #security
 jwt.refreshExpirationDateInMs = 50000000
