--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@
 spring.datasource.url=jdbc:mysql://us-cdbr-east-05.cleardb.net:3306/heroku_853885be7ce1deb
 spring.datasource.username=bf4e07bf2a9902
 spring.datasource.password=666a2efb
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 #security
 jwt.refreshExpirationDateInMs = 50000000
