feat: Nutritional Plan get method

--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,19 @@ configurations {
     }
 }
 
+azurewebapp {
+    subscription = '4790f823-6cdf-4a0f-a2e6-916c9e3020b1'
+    resourceGroup = 'nutrimisky-app'
+    appName = 'nutrimisky-backend'
+    pricingTier = 'B1'
+    region = 'eastus'
+    runtime {
+        os = 'Linux'
+        webContainer = 'Java SE'
+        javaVersion = 'Java 8'
+    }
+}
+
 repositories {
     mavenCentral()
 }
