--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,16 +4,20 @@
 #spring.datasource.username=root
 #spring.datasource.password=
 #--------------------------------- HEROKU - DEV --------------------------------------------
-spring.datasource.url=jdbc:mysql://us-cdbr-east-05.cleardb.net:3306/heroku_853885be7ce1deb
-spring.datasource.username=bf4e07bf2a9902
-spring.datasource.password=666a2efb
+#spring.datasource.url=jdbc:mysql://us-cdbr-east-05.cleardb.net:3306/heroku_853885be7ce1deb
+#spring.datasource.username=bf4e07bf2a9902
+#spring.datasource.password=666a2efb
+#--------------------------------- AZURE - DEV --------------------------------------------
+spring.datasource.url=jdbc:mysql://nutrimisky-db.mysql.database.azure.com:3306/nutrimisky
+spring.datasource.username=bryan
+spring.datasource.password=Slayerzx2
 spring.jpa.hibernate.ddl-auto=update
 
 #security
 jwt.refreshExpirationDateInMs = 50000000
 
 #server
-server.port=${PORT:8080}
+server.port=${PORT:5000}
 #server.port=8080
 spring.jpa.database=MYSQL
 spring.jpa.show-sql=true
